Add logo and title

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -102,6 +102,10 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+.logo {
+    height: 6rem;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
